[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/y2mate.com - Super Mario World  Jump Sound Effect.ogg" type="AudioStream" id=2]
[ext_resource path="res://ASSETS/mario/alt skid.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/mario/alt walk no extra.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=5]
[ext_resource path="res://ASSETS/mario/alt jump no extra.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/mario/alt idle no extra.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/mario/dead.png" type="Texture" id=8]
[ext_resource path="res://ASSETS/mario/alt fall no extra.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/mario/victory.png" type="Texture" id=10]
[ext_resource path="res://ASSETS/mario/run1.png" type="Texture" id=11]
[ext_resource path="res://ASSETS/mario/run2.png" type="Texture" id=12]
[ext_resource path="res://ASSETS/mario/skid.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.3913, 33.3823 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 66, 84 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 60, 65 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 57, 77 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 55, 80 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ) ],
"loop": true,
"name": "brake",
"speed": 1.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "VICTORY",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Run",
"speed": 12.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Air",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"players",
]]
position = Vector2( 4.82239, 12.2789 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Walk"
playing = true

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 8.51701, -155.338 )
scale = Vector2( 0.8, 0.8 )
current = true
zoom = Vector2( 0.65, 0.65 )
limit_top = -700
limit_bottom = 50
limit_smoothed = true
drag_margin_v_enabled = true
offset_v = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 5 )

[node name="Jumpsfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.097

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Coyote" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Buffer" type="Timer" parent="."]
wait_time = 0.2

[node name="Skeleton2D" type="Skeleton2D" parent="."]

[node name="KILL" type="Timer" parent="."]

[node name="run" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Coyote" to="." method="_on_Coyote_timeout"]
[connection signal="timeout" from="Buffer" to="." method="_on_Buffer_timeout"]
[connection signal="timeout" from="KILL" to="." method="_on_KILL_timeout"]
